// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Property /> can render a basic property 1`] = `
<tr
  className="property last"
  onClick={[Function]}
>
  <td
    className="property-name"
  >
    <span>
      type
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      string
    </span>
    <span
      className="property-constraints"
    >
      <span
        className="property-required"
      >
        required
      </span>
    </span>
  </td>
</tr>
`;

exports[`<Property /> can render a property with a format 1`] = `
<tr
  className="property"
  onClick={[Function]}
>
  <td
    className="property-name"
  >
    <span>
      value
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      string
      <span
        className="property-format"
      >
        &lt;
        email
        &gt;
      </span>
    </span>
    <span
      className="property-constraints"
    />
  </td>
</tr>
`;

exports[`<Property /> can render a property with a subtype 1`] = `
<tr
  className="property"
  onClick={[Function]}
>
  <td
    className="property-name"
  >
    <span>
      data
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      <span
        className="property-subtype"
      >
        object
        []
      </span>
    </span>
    <span
      className="property-constraints"
    />
  </td>
</tr>
`;

exports[`<Property /> can render a property with description 1`] = `
<tr
  className="property"
  onClick={[Function]}
>
  <td
    className="property-name"
  >
    <span>
      type
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      string
    </span>
    <PropertyConstraints
      constraints={undefined}
      isRequired={true}
      type={
        Array [
          "string",
        ]
      }
    />
    <div>
      <Description
        description="This is _markdown_ text"
        isInline={true}
      />
    </div>
  </td>
</tr>
`;

exports[`<Property /> can render a property with enum 1`] = `
<tr
  className="property"
  onClick={[Function]}
>
  <td
    className="property-name"
  >
    <span>
      packagingType
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      string
    </span>
    <span
      className="property-constraints"
    >
      <span
        className="property-required"
      >
        required
      </span>
    </span>
    <div>
      <span>
        Valid values:
      </span>
      <span
        className="enum"
      >
        box
      </span>
      <span
        className="enum"
      >
        carton
      </span>
    </div>
  </td>
</tr>
`;

exports[`<Property /> can render a property with multiple types 1`] = `
<tr
  className="property"
  onClick={[Function]}
>
  <td
    className="property-name"
  >
    <span>
      value
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      string, number
    </span>
    <span
      className="property-constraints"
    />
  </td>
</tr>
`;

exports[`<Property /> can render a property with numerical constraints 1`] = `
<tr
  className="property"
  onClick={[Function]}
>
  <td
    className="property-name"
  >
    <span>
      type
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      number
    </span>
    <PropertyConstraints
      constraints={
        Object {
          "multipleOf": 2,
        }
      }
      isRequired={true}
      type={
        Array [
          "number",
        ]
      }
    />
  </td>
</tr>
`;
